--- a/scitos.core/src/main/resources/lang/messages.xml
+++ b/scitos.core/src/main/resources/lang/messages.xml
@@ -89,6 +89,10 @@ It might belong to a newer version. Please check if there is a newer version ava
 	<entry key="Client.MenuBar.File.Types.AIS">AIS Project</entry>
 	<entry key="Client.MenuBar.Preferences">Preferences</entry>
 	<entry key="Client.MenuBar.Quit">Quit</entry>
+	<entry key="Client.MenuBar.View">View</entry>
+	<entry key="Client.MenuBar.View.Font.ScaleUp">Increase Font Size</entry>
+	<entry key="Client.MenuBar.View.Font.ScaleDown">Reduce Font Size</entry>
+	<entry key="Client.MenuBar.View.ProjectTreeVisibility">Hide/Show Project Tree</entry>
 	<entry key="Client.ToolBar.Title">SciToS - ToolBar</entry>
 	<entry key="Client.Preferences.General">General</entry>
 	<entry key="Client.Preferences.General.LookAndFeel">Java Swing Look and Feel</entry>
