--- a/scitos.core/src/main/resources/lang/messages_de.xml
+++ b/scitos.core/src/main/resources/lang/messages_de.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
 <!-- 
    Copyright (C) 2015 HermeneutiX.org
    
@@ -18,61 +19,6 @@
    along with SciToS. If not, see <http://www.gnu.org/licenses/>.
 -->
 <properties>
-	<entry key="Ais.Analysis.ExportToSpreadsheet">Tabellen Exportieren</entry>
-	<entry key="Ais.Analysis.Summary">Ergebnisse</entry>
-	<entry key="Ais.Analysis.Sequence">Sequenzen</entry>
-	<entry key="Ais.Analysis.Pattern">Muster</entry>
-	<entry key="Ais.Analysis.TableHeader.Interview">Interview</entry>
-	<entry key="Ais.Analysis.TableHeader.TokenCount">Tokenanzahl</entry>
-	<entry key="Ais.Analysis.TableContent.NoDetailsScored">noch keine analysierten Interviews</entry>
-	<entry key="Ais.Client.Preferences.NodeLabel">AIS</entry>
-	<entry key="Ais.Client.Preferences.DetailCategories.Code">Name</entry>
-	<entry key="Ais.Client.Preferences.DetailCategories.Color">Farbe</entry>
-	<entry key="Ais.Client.Preferences.DetailCategories.Code.NotUnique">Der eingegebene Name ist ungültig.
-
-Bitte wähle einen eindeutigen Namen,
-mit einer Länge von ein bis fünf Zeichen.</entry>
-	<entry key="Ais.Client.Preferences.DetailCategories.Default">Standard Kategorien für neue Projekte/Dateien</entry>
-	<entry key="Ais.Client.Preferences.DetailCategories.Invalid">Das definierte Kategorie-Modell ist ungültig.
-
-Jeder Kategorie muss ein eindeutiger Name, 
-mit einer Länge von ein bis fünf Zeichen, 
-zugeordnet sein.</entry>
-	<entry key="Ais.Client.Preferences.DetailCategories.Name">Beschreibung</entry>
-	<entry key="Ais.Client.Preferences.DetailCategories.SetAsDefault">Als Standard für neue Projekte/Dateien verwenden</entry>
-	<entry key="Ais.Client.Preferences.DetailCategories.ShortCut">Tastenkombination</entry>
-	<entry key="Ais.Client.Preferences.DetailCategories.AddChildCategory">Unterkategorie hinzufügen</entry>
-	<entry key="Ais.Client.Preferences.DetailCategories.AddRootCategory">Oberkategorie hinzufügen</entry>
-	<entry key="Ais.Client.Preferences.DetailCategories.DeleteCategory">Kategorie entfernen</entry>
-	<entry key="Ais.Interview.Delete">Interview löschen</entry>
-	<entry key="Ais.Interview.Delete.Warning">Das ausgewählte Interview wird gelöscht.
-
-Dieser Schritt kann nicht rückgängig gemacht werden.</entry>
-	<entry key="Ais.Interview.Modify.Order">Reihenfolge der Interviews eines Studienteilnehmers bearbeiten</entry>
-	<entry key="Ais.Interview.Modify.ParticipantId">Studienteilnehmer umbenennen</entry>
-	<entry key="Ais.Interview.Modify.ParticipantId.Description">Neuen Bezeichner für Studienteilnehmer eingeben:</entry>
-	<entry key="Ais.Interview.New">Neues Interview anlegen</entry>
-	<entry key="Ais.Interview.New.ParticipantId">Bezeichner für Studienteilnehmer:</entry>
-	<entry key="Ais.Interview.InputHint">Transkribierten Text des autobiographischen Interview eingeben oder hineinkopieren...</entry>
-	<entry key="Ais.Interview.StartScoring">Beginne Scoring</entry>
-	<entry key="Ais.Interview.Score.SelectionInvalid">Ungültige unterbrochene Auswahl:
-
-Eingeschlossene Kategorien müssen abgeschlossen sein.
-Sie müssen im ausgewählten/eingeschlossenen Bereich beginnen und enden.</entry>
-	<entry key="Ais.Interview.Score.Remove">Entfernen</entry>
-	<entry key="Ais.Interview.Score.RemoveToolTip">Zugewiesene Kategorien von ausgewählten Token entfernen.</entry>
-	<entry key="Ais.Project.New">WO soll das neue AIS Projekt gespeichert werden?</entry>
-	<entry key="Ais.Project.ChangeDetailCategories">Kategoriemodell bearbeiten</entry>
-	<entry key="Ais.Project.ChangeDetailCategories.MatchOldToNew">Alte Kategorien durch neue ersetzen</entry>
-	<entry key="Ais.Project.ChangeDetailCategories.MatchOldToNew.Description">
-Du bist dabei strukturelle Veränderungen vorzunehmen, die sich auf bereits zugewiesene Kategorien auswirken.
-
-Bitte wähle aus, welche (neue) Kategorie an Stelle welcher (alten) Kategorie zugewiesen werden soll.
-Zugeordnete Kategorien ohne Entsprechung im neuen Modell werden verworfen!</entry>
-	<entry key="Ais.Project.ChangeDetailCategories.OldCategory">Alte Kategorie</entry>
-	<entry key="Ais.Project.ChangeDetailCategories.AffectedTokens">Anzahl zugeordneter Token</entry>
-	<entry key="Ais.Project.ChangeDetailCategories.ReplacingCategory">Ersetzt durch neue Kategorie</entry>
-	<entry key="Ais.Project.Export.Html">HTML-Datei</entry>
 	<entry key="Cancel">Abbruch</entry>
 	<entry key="Client.MenuBar.About">Info</entry>
 	<entry key="Client.MenuBar.Edit">Bearbeiten</entry>
@@ -82,6 +28,7 @@ Zugeordnete Kategorien ohne Entsprechung im neuen Modell werden verworfen!</entr
 	<entry key="Client.MenuBar.File.Export">Exportieren als...</entry>
 	<entry key="Client.MenuBar.File.New">Neu</entry>
 	<entry key="Client.MenuBar.File.Open">Öffnen</entry>
+	<entry key="Client.MenuBar.File.Open.ProjectAlreadyOpen">Die ausgewählte Datei ist bereits geöffnet.</entry>
 	<entry key="Client.MenuBar.File.Open.InvalidXmlDocument">Die ausgewählte Datei enthält kein gültiges SciToS Projekt.</entry>
 	<entry key="Client.MenuBar.File.Open.FileTypeNotRecognized">Die ausgewählte Datei ist einem Typ zugeordnet,
 der in deiner Version von SciToS nicht unterstützt wird.
